k8s/infra-2/overlays/dev/traefik-public/traefik-public-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-public-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: traefik-public
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
