k8s/infra-2/overlays/dev/traefik-public/traefik-public-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: tls
      services:
        - name: client-srv
          port: 3000
  tls:
    secretName: certs-secret
    options:
      name: tls-options
